google-cloud/k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-gke-ingress
  namespace: argocd
  annotations:
    # GKE natív Google Cloud Load Balancer
    kubernetes.io/ingress.class: "gce"
    # Managed SSL tanúsítvány (Google-managed, automatikus megújítás)
    networking.gke.io/managed-certificates: "argocd-ssl-cert"
    # HTTP → HTTPS átirányítás a Load Balancer szintjén
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  rules:
    - host: argocd.pelda.com  # <-- Ide írd a valós ArgoCD domain nevet
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
---
# Az ArgoCD server service-t NodePort-ra kell patch-elni GKE Ingress-hez
# (GCE Ingress nem tud ClusterIP mögé proxyzni)
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
